Add paper response API